# SolARModuleCeres

./: .gitignore  CMakeLists.txt  JenkinsFile  README.md  SolARModuleCeres.pri  SolARModuleCeres.pro  bcom-SolARModuleCeres.pc.in  doxyfile  packagedependencies-cmake.txt  packagedependencies-linux.txt  packagedependencies-win.txt  packagedependencies.txt  xpcf_SolARModuleCeres_registry.xml
.build-rules/linux-gcc-x86_64/: packagedependencies.txt
build-SolARTestModuleCeres/: Makefile  camera_calibration.yml  stream_config.txt
build-SolARTestModuleCeres-Desktop_Qt_5_9_0_MSVC2015_64bit-Release/: SolARTestModuleCeres_resource.rc  SolARTestModuleCeres_resource.res
build-SolARTestModuleCeres-R/: bundle_config.xml
interfaces/: SolARBundlerCeres.h  SolARCeresAPI.h  SolARCeresLocalParametrization.h  SolARModuleCeres_traits.h
src/: SolARBundlerCeres.cpp  SolARCeresLocalParametrization.cpp  SolARModuleCeres.cpp  SolARModuleManagerCeres.cpp
tests/: CMakeLists.txt  K.txt  SolARTestModuleCeres.pro  bundle_config.xml  cloud.txt  conf_Bundle.xml  conf_Ceres.xml  kp0.txt  kp1.txt  main.cpp  packagedependencies-cmake.txt  packagedependencies.txt  pose1.txt
tests/Bundler/: CMakeLists.txt  SolARCeresBundler_conf.xml  SolARTestModuleCeresBundler.pro  conf_Bundler.xml  main.cpp
tests/SolARTestCeresGlobalBundleAdjustment/: SolARTestCeresGlobalBundleAdjustment.pro  SolARTestCeresGlobalBundleAdjustment_conf.xml  main.cpp
tests/SolARTest_ModuleCeres_Bundler/: SolARTest_ModuleCeres_Bundler.pro  SolARTest_ModuleCeres_Bundler_conf.xml  main.cpp
tests/room15Bundle/: room15Pts2D.txt
